## Makefile.am -- Process this file with automake to produce Makefile.in
AM_CPPFLAGS =-I ./                 \
        -I$(blitz_includes)            \
        -I$(tvmet_includes)            \
        -I$(srcdir)/../                         \
        -I$(srcdir)/../VoomMath/                    \
        -I$(srcdir)/../Node/                    \
        -I$(srcdir)/../Materials/               \
        -I$(srcdir)/../Geometry/                \
	-I$(srcdir)/../AdsExt                   \
        -I$(srcdir)/../Quadrature/              \
	-I$(srcdir)/../Elements/                \
	-I$(srcdir)/../Constraints/             \
	-I$(srcdir)/../Potentials/              \
	-I$(srcdir)/../Solvers/                 \
	-I$(srcdir)/../Body/                    \
        -I$(srcdir)/../Shape/
#
lib_LIBRARIES=libAtom.a
#
libAtom_a_SOURCES=Atom.cpp



