## Makefile.am -- Process this file with automake to produce Makefile.in
AM_CPPFLAGS =-I$(srcdir)                \
        -I$(blitz_includes)            \
        -I$(tvmet_includes)            \
        -I$(srcdir)/../                         \
        -I$(srcdir)/../VoomMath/                    \
        -I$(srcdir)/../Node/                    \
        -I$(srcdir)/../Materials/               \
        -I$(srcdir)/../Geometry/                \
        -I$(srcdir)/../Quadrature/              \
	-I$(srcdir)/../Elements/                \
	-I$(srcdir)/../Solvers/                 \
	-I$(srcdir)/../Body/                    \
        -I$(srcdir)/../Shape/
#
lib_LIBRARIES=libMacromolecule.a
#
libMacromolecule_a_SOURCES=Macromolecule.cpp



